--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<title>Main Page</title>
 	<link rel="stylesheet" type="text/css" href="css/w3.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="stylesheet" type="text/css" href="../../css/main_content.css">
+	<link rel="stylesheet" type="text/css" href="css/sidebar.css">
 	<script type="text/javascript" src="js/show-hide-menu.js"></script>
 	<noscript>Your browser does not support JavaScript!</noscript>
 </head>
@@ -14,15 +16,15 @@
 		<img class="w3-bar-item" src="images/test_img.jpg" alt="Logo">
 		<button id="close-button" type="button" class="w3-bar-item w3-button w3-large w3-hide-large" onclick="closeSidebar()">Close &times;</button>
 		<a class="w3-bar-item w3-button main-page active" href="index.html"></a>
-		<a class="w3-bar-item w3-button workers" href="workers.html"></a>
-		<a class="w3-bar-item w3-button orders" href="#"></a>
-		<a class="w3-bar-item w3-button storage" href="#"></a>
-		<a class="w3-bar-item w3-button reports" href="#"></a>
+		<a class="w3-bar-item w3-button users" href="html/users/users.html"></a>
+		<a class="w3-bar-item w3-button orders" href="html/orders/orders.html"></a>
+		<a class="w3-bar-item w3-button storage" href="html/storage/storage.html"></a>
+		<a class="w3-bar-item w3-button reports" href="html/reports/userReports.html"></a>
 	</div>
 
 	<div id="main-content" class="w3-main">
 		
-		<div class="w3-container w3-blue">
+		<div id="topbar" class="w3-container w3-blue">
 			<button id="open-button" type="button" class="w3-button w3-blue w3-xlarge w3-hide-large" onclick='openSidebar()' > &#9776; </button>
 			<h3> Welcome, User Name </h3>
 		</div>
