--- a/html/storage/storage.html
+++ b/html/storage/storage.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="../../css/main.css">
 	<link rel="stylesheet" type="text/css" href="../../css/main_content.css">
 	<link rel="stylesheet" type="text/css" href="../../css/sidebar.css">
+	<link rel="stylesheet" type="text/css" href="../../css/topbar.css">
 	<script type="text/javascript" src="../../js/show-hide-menu.js"></script>
 	<noscript>Your browser does not support JavaScript!</noscript>
 
@@ -20,7 +21,7 @@
 		<a class="w3-bar-item w3-button users" href="../users/users.html"></a>
 		<a class="w3-bar-item w3-button orders" href="../orders/orders.html"></a>
 		<a class="w3-bar-item w3-button storage active" href="storage.html"></a>
-		<a class="w3-bar-item w3-button reports" href="../reports/userReports.html"></a>
+		<a class="w3-bar-item w3-button reports" href="../reports/createReport.html"></a>
 	</div>
 
 
@@ -28,6 +29,12 @@
 		<div id="topbar" class="w3-container w3-blue">
 			<button id="open-button" type="button" class="w3-button w3-blue w3-xlarge w3-hide-large" onclick='openSidebar()' > &#9776; </button>			
 			<h3> Welcome, User Name </h3>
+		</div>
+
+		<h1 id="page-header">Storage</h1>
+
+		<div id="main-panel" class="w3-container">
+			
 		</div>
 
 	</div>
