--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
 	<title>Main Page</title>
 	<link rel="stylesheet" type="text/css" href="css/w3.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
-	<link rel="stylesheet" type="text/css" href="../../css/main_content.css">
+	<link rel="stylesheet" type="text/css" href="css/main_content.css">
 	<link rel="stylesheet" type="text/css" href="css/sidebar.css">
+	<link rel="stylesheet" type="text/css" href="css/topbar.css">
 	<script type="text/javascript" src="js/show-hide-menu.js"></script>
-	<noscript>Your browser does not support JavaScript!</noscript>
 </head>
 <body>
 	<div id="sidenav" class="w3-sidebar w3-bar-block w3-collapse w3-card w3-animate-left">
 		<img class="w3-bar-item" src="images/test_img.jpg" alt="Logo">
-		<button id="close-button" type="button" class="w3-bar-item w3-button w3-large w3-hide-large" onclick="closeSidebar()">Close &times;</button>
+		<button id="close-button" type="button" class="w3-bar-item w3-button w3-hide-large" onclick="closeSidebar()">Close &times;</button>
 		<a class="w3-bar-item w3-button main-page active" href="index.html"></a>
 		<a class="w3-bar-item w3-button users" href="html/users/users.html"></a>
 		<a class="w3-bar-item w3-button orders" href="html/orders/orders.html"></a>
 		<a class="w3-bar-item w3-button storage" href="html/storage/storage.html"></a>
-		<a class="w3-bar-item w3-button reports" href="html/reports/userReports.html"></a>
+		<a class="w3-bar-item w3-button reports" href="html/reports/createReport.html"></a>
 	</div>
 
 	<div id="main-content" class="w3-main">
