Removed test image and unnecessary css files

--- a/html/reports/createReport.html
+++ b/html/reports/createReport.html
@@ -5,7 +5,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Reports</title>
 	<link rel="stylesheet" type="text/css" href="../../css/w3.css">
-	<link rel="stylesheet" type="text/css" href="../../css/main.css">
 	<link rel="stylesheet" type="text/css" href="../../css/main_content.css">
 	<link rel="stylesheet" type="text/css" href="../../css/sidebar.css">
 	<link rel="stylesheet" type="text/css" href="../../css/topbar.css">
@@ -25,27 +24,21 @@
 	</div>
 
 
-	<div id="main-content" class="w3-main">		
+	<main class="w3-main">		
 		<div id="topbar" class="w3-container w3-blue">
 			<button id="open-button" type="button" class="w3-button w3-blue w3-xlarge w3-hide-large" onclick='openSidebar()' > &#9776; </button>			
 			<h3> Welcome, User Name </h3>
 		</div>
 
-		<h1 id="page-header">Generate Report</h1>
+		<header> <h1>Generate Report</h1> </header>
 
 		<div id="main-panel" class="w3-container">
 
 			<div class="action-panel"></div>
 
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
 		</div>
 
-	</div>
+	</main>
 </body>
 </html>           
