--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Main Page</title>
 	<link rel="stylesheet" type="text/css" href="css/w3.css">
-	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="stylesheet" type="text/css" href="css/main_content.css">
 	<link rel="stylesheet" type="text/css" href="css/sidebar.css">
 	<link rel="stylesheet" type="text/css" href="css/topbar.css">
@@ -22,13 +21,13 @@
 		<a class="w3-bar-item w3-button reports" href="html/reports/createReport.html"></a>
 	</div>
 
-	<div id="main-content" class="w3-main">
+	<main class="w3-main">
 		
 		<div id="topbar" class="w3-container w3-blue">
 			<button id="open-button" type="button" class="w3-button w3-blue w3-xlarge w3-hide-large" onclick='openSidebar()' > &#9776; </button>
 			<h3> Welcome, User Name </h3>
 		</div>
-	</div>
+	</main>
 
 </body>
 </html>
