--- a/html/reports/createReport.html
+++ b/html/reports/createReport.html
@@ -4,10 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Reports</title>
-	<link rel="stylesheet" type="text/css" href="../../css/w3.css">
 	<link rel="stylesheet" type="text/css" href="../../css/main_content.css">
-	<link rel="stylesheet" type="text/css" href="../../css/sidebar.css">
-	<link rel="stylesheet" type="text/css" href="../../css/topbar.css">
 	<script type="text/javascript" src="../../js/show-hide-menu.js"></script>
 	<noscript>Your browser does not support JavaScript!</noscript>
 
@@ -25,7 +22,7 @@
 
 
 	<main class="w3-main">		
-		<div id="topbar" class="w3-container w3-blue">
+		<div class="w3-container w3-blue topbar">
 			<button id="open-button" type="button" class="w3-button w3-blue w3-xlarge w3-hide-large" onclick='openSidebar()' > &#9776; </button>			
 			<h3> Welcome, User Name </h3>
 		</div>
