Changed file configuration in css folder. Changed objects: `div.main-content`->`section`. Added test rows to tables

--- a/html/orders/orders.html
+++ b/html/orders/orders.html
@@ -29,7 +29,7 @@
 
 		<header> <h1>Orders</h1> </header>	
 
-		<div id="main-panel" class="w3-container">
+		<section>
 
 
 			<div class="action-panel">
@@ -54,7 +54,7 @@
 				</div>
 
 			</div>
-	 
+
 			<table>
 				<tr>
 					<th> № </th>
@@ -63,8 +63,20 @@
 					<th> Status </th>
 					<th> Action </th>
 				</tr>
+				<tr>
+					<td>1</td>
+					<td> Furn Inc.</td>
+					<td> 5d 4h 62m</td>
+					<td> In progress </td>
+					<td> 
+						<button> <img src="../../images/svg/info-circle.svg" alt="Edit"></button>
+						<button> <img src="../../images/svg/pencil-fill.svg" alt="Edit"></button>
+						<button> <img src="../../images/svg/trash-fill.svg" alt="Delete"></button> 
+					</td>
+				</tr>
 			</table>
-		</div>
+
+		</section>
 
 	</main>
 </body>
