--- a/html/reports/createReport.html
+++ b/html/reports/createReport.html
@@ -29,12 +29,12 @@
 
 		<header> <h1>Generate Report</h1> </header>
 
-		<div id="main-panel" class="w3-container">
+		<section class="w3-container">
 
 			<div class="action-panel"></div>
 
 
-		</div>
+		</section>
 
 	</main>
 </body>
