--- a/html/storage/storage.html
+++ b/html/storage/storage.html
@@ -29,9 +29,9 @@
 
 		<header> <h1>Storage</h1> </header>
 
-		<div id="main-panel" class="w3-container">
+		<section>
 			
-		</div>
+		</section>
 
 	</main>
 </body>
