--- a/html/users/users.html
+++ b/html/users/users.html
@@ -29,7 +29,7 @@
 
 		<header> <h1>Users</h1> </header>
 
-		<div id="main-panel" class="w3-container">
+		<section>
 			
 			<div class="action-panel">
 
@@ -44,14 +44,24 @@
 				<tr>
 					<th> Login </th>
 					<th> Email </th>
-					<th> Mobile </th>
+					<th> Mob </th>
 					<th> Web </th>
 					<th> Action </th>
+				</tr>
+				<tr>
+					<td> Josef </td>
+					<td> exmpl_abc@gmail.com </td>
+					<td> <input type="checkbox"> </td>
+					<td> <input type="checkbox"> </td>
+					<td> 	
+						<button> <img src="../../images/svg/pencil-fill.svg" alt="Edit"></button>
+						<button> <img src="../../images/svg/trash-fill.svg" alt="Delete"></button> 
+					</td>
 				</tr>
 			</table>
 			
 
-		</div>
+		</section>
 	</main>
 </body>
 </html>
