Added raw version for each page, updated responsivness

--- a/html/orders/orders.html
+++ b/html/orders/orders.html
@@ -40,7 +40,7 @@
 				</div>
 
 				<button 
-					class="w3-button action-button w3-light-green w3-hover-green"> Add Order
+					class="w3-button action-button w3-light-green w3-hover-green" onclick="document.location='createOrder.html'"> Add Order
 				</button>
 
 				<div class="horizontal-flex">
