--- a/html/storage/storage.html
+++ b/html/storage/storage.html
@@ -6,7 +6,6 @@
 	<title>Storage</title>
 	<link rel="stylesheet" type="text/css" href="../../css/main_content.css">
 	<script type="text/javascript" src="../../js/show-hide-menu.js"></script>
-	<noscript>Your browser does not support JavaScript!</noscript>
 
 </head>
 <body>
@@ -30,7 +29,10 @@
 		<header> <h1>Storage</h1> </header>
 
 		<section>
-			
+			<div class="collapsing-horizontal-flex spreaded"> 
+				<div class="vertical-flex">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas molestias, magni. Voluptates amet numquam itaque corrupti eius rerum autem, et esse odit voluptas culpa quasi quas hic maxime, maiores dolorem.</div>
+				<div class="vertical-flex">Lorem ipsum dolor sit, amet consectetur, adipisicing elit. Expedita, omnis! Illo, facere? Autem temporibus beatae cupiditate consectetur minus, quae doloremque obcaecati dolorum rem hic quisquam laborum perspiciatis sapiente deleniti, iusto?</div> 
+			</div>
 		</section>
 
 	</main>
