--- a/html/orders/createOrder.html
+++ b/html/orders/createOrder.html
@@ -36,13 +36,13 @@
 				<p>Realization Time</p>
 				<input class="full-wide" type="text">
 			</div>
-			<p>Goods</p>
+			<p>Materials</p>
 			<div class="collapsing-horizontal-flex">
 				<div class="vertical-flex">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente, provident. Vitae, at exercitationem. Ratione, nisi mollitia ipsa fugit, architecto atque ea ex, earum provident repudiandae odit iure fugiat necessitatibus maiores.</div>
 				<div class="vertical-flex">Lorem ipsum dolor sit amet consectetur adipisicing, elit. Dignissimos fugit dolorem adipisci aliquid hic cum, officia aperiam autem inventore cumque maiores vel corporis porro excepturi amet in doloremque sint reiciendis.</div>
 			</div>
 			<p>Details</p>
-			<textarea name="orderDetails" id="orderDetails" cols="30" rows="10"></textarea>
+			<textarea name="orderDetails" id="orderDetails" cols="30" rows="3"></textarea>
 			<button class="w3-button action-button w3-light-green w3-hover-green">Create Order</button>
 		</section>	
 	</main>	
