--- a/html/storage/storage.html
+++ b/html/storage/storage.html
@@ -32,20 +32,68 @@
 				<div class="item-column">
 					<div class="storage-item">
 						<div class="item-header">ORG</div>
-						<div>150</div>
+						<div id="orgValue">150</div>
 						<div>
-							<button class="w3-button w3-green action-button">+</button>
-							<button class="w3-button w3-amber action-button">-</button>
+							<button class="w3-button w3-green w3-hover-green action-button">+</button>
+							<button class="w3-button w3-amber w3-hover-amber action-button">-</button>
+						</div>
+					</div>
+					<div class="storage-item">
+						<div class="item-header">REG</div>
+						<div id="regValue">200</div>
+						<div>
+							<button class="w3-button w3-green w3-hover-green action-button">+</button>
+							<button class="w3-button w3-amber w3-hover-amber action-button">-</button>
+						</div>
+					</div>
+					<div class="storage-item">
+						<div class="item-header">TP</div>
+						<div id="tpValu">200</div>
+						<div>
+							<button class="w3-button w3-green w3-hover-green action-button">+</button>
+							<button class="w3-button w3-amber w3-hover-amber action-button">-</button>
+						</div>
+					</div>
+					<div class="storage-item">
+						<div class="item-header">MIX</div>
+						<div id="mixValue">200</div>
+						<div>
+							<button class="w3-button w3-green w3-hover-green action-button">+</button>
+							<button class="w3-button w3-amber w3-hover-amber action-button">-</button>
 						</div>
 					</div>
 				</div>
 				<div class="item-column">
 					<div class="storage-item">
 						<div class="item-header">80</div>
-						<div>300</div>
+						<div id="value80">300</div>
 						<div>
-							<button class="w3-button w3-green action-button">+</button>
-							<button class="w3-button w3-amber action-button">-</button>
+							<button class="w3-button w3-green w3-hover-green action-button">+</button>
+							<button class="w3-button w3-amber w3-hover-amber action-button">-</button>
+						</div>
+					</div>
+					<div class="storage-item">
+						<div class="item-header">100</div>
+						<div id="value100" >300</div>
+						<div>
+							<button class="w3-button w3-green w3-hover-green action-button">+</button>
+							<button class="w3-button w3-amber w3-hover-amber action-button">-</button>
+						</div>
+					</div>
+					<div class="storage-item">
+						<div class="item-header">150</div>
+						<div id="value150">300</div>
+						<div>
+							<button class="w3-button w3-green w3-hover-green action-button">+</button>
+							<button class="w3-button w3-amber w3-hover-amber action-button">-</button>
+						</div>
+					</div>
+					<div class="storage-item">
+						<div class="item-header">200</div>
+						<div id="value200">300</div>
+						<div>
+							<button class="w3-button w3-green w3-hover-green action-button">+</button>
+							<button class="w3-button w3-amber w3-hover-amber action-button">-</button>
 						</div>
 					</div>
 				</div> 
