Added item fields to CreateOrder page

--- a/html/orders/createOrder.html
+++ b/html/orders/createOrder.html
@@ -37,9 +37,43 @@
 				<input class="full-wide" type="text">
 			</div>
 			<p>Materials</p>
-			<div class="collapsing-horizontal-flex">
-				<div class="vertical-flex">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente, provident. Vitae, at exercitationem. Ratione, nisi mollitia ipsa fugit, architecto atque ea ex, earum provident repudiandae odit iure fugiat necessitatibus maiores.</div>
-				<div class="vertical-flex">Lorem ipsum dolor sit amet consectetur adipisicing, elit. Dignissimos fugit dolorem adipisci aliquid hic cum, officia aperiam autem inventore cumque maiores vel corporis porro excepturi amet in doloremque sint reiciendis.</div>
+			<div class="collapsing-horizontal-flex" style="justify-content: space-around;">
+				<div class="item-column"> 
+					<div class="storage-item">
+						<div class="item-header">ORG:</div>
+						<input id="valueOrg" name="valueOrg" type="text">
+					</div>
+					<div class="storage-item">
+						<div class="item-header">REG:</div>
+						<input id="valueReg" name="valueReg" type="text">
+					</div>
+					<div class="storage-item">
+						<div class="item-header">TP:</div>
+						<input id="valueTp" name="valueTp" type="text">
+					</div>
+					<div class="storage-item">
+						<div class="item-header">MIX:</div>
+						<input id="valueMix" name="valueMix" type="text">
+					</div>
+				</div>
+				<div class="item-column"> 
+						<div class="storage-item">
+						<div class="item-header">80:</div>
+						<input id="value80" name="value80" type="text">
+					</div>
+					<div class="storage-item">
+						<div class="item-header">100:</div>
+						<input id="value100" name="value100" type="text">
+					</div>
+					<div class="storage-item">
+						<div class="item-header">150:</div>
+						<input id="value150" name="value150" type="text">
+					</div>
+					<div class="storage-item">
+						<div class="item-header">200:</div>
+						<input id="value200" name="value200" type="text">
+					</div>
+				</div>
 			</div>
 			<p>Details</p>
 			<textarea name="orderDetails" id="orderDetails" cols="30" rows="3"></textarea>
