Changed return link in 404 page. Removed redundant classes in css files. Changed tables structure.

--- a/404.html
+++ b/404.html
@@ -65,7 +65,7 @@
 <body>
   <h1>Page Not Found</h1>
   <p>Sorry, but the page you were trying to view does not exist.</p>
-  <p><a href="Training.html">Return to main page</a></p>
+  <p><a href="index.html">Return to main page</a></p>
 </body>
 
 </html>
