--- a/html/orders/createOrder.html
+++ b/html/orders/createOrder.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 	<div id="sidenav" class="w3-sidebar w3-bar-block w3-collapse w3-card w3-animate-left">
-		<img class="w3-bar-item" src="../../images/test_img.jpg" alt="Logo">
+		<img class="w3-bar-item" src="../../images/logo.jpg" alt="Logo">
 		<button id="close-button" type="button" class="w3-bar-item w3-button w3-large w3-hide-large" onclick="closeSidebar()">Close &times;</button>
 		<a class="w3-bar-item w3-button main-page" href="../../index.html"></a>
 		<a class="w3-bar-item w3-button users" href="../users/users.html"></a>
@@ -37,41 +37,41 @@
 				<input class="full-wide" type="text">
 			</div>
 			<p>Materials</p>
-			<div class="collapsing-horizontal-flex" style="justify-content: space-around;">
+			<div class="collapsing-horizontal-flex">
 				<div class="item-column"> 
 					<div class="storage-item">
 						<div class="item-header">ORG:</div>
-						<input id="valueOrg" name="valueOrg" type="text">
+						<input id="value-org" name="valueOrg" type="text">
 					</div>
 					<div class="storage-item">
 						<div class="item-header">REG:</div>
-						<input id="valueReg" name="valueReg" type="text">
+						<input id="value-reg" name="valueReg" type="text">
 					</div>
 					<div class="storage-item">
 						<div class="item-header">TP:</div>
-						<input id="valueTp" name="valueTp" type="text">
+						<input id="value-tp" name="valueTp" type="text">
 					</div>
 					<div class="storage-item">
 						<div class="item-header">MIX:</div>
-						<input id="valueMix" name="valueMix" type="text">
+						<input id="value-mix" name="valueMix" type="text">
 					</div>
 				</div>
 				<div class="item-column"> 
 						<div class="storage-item">
 						<div class="item-header">80:</div>
-						<input id="value80" name="value80" type="text">
+						<input id="value-80" name="value80" type="text">
 					</div>
 					<div class="storage-item">
 						<div class="item-header">100:</div>
-						<input id="value100" name="value100" type="text">
+						<input id="value-100" name="value100" type="text">
 					</div>
 					<div class="storage-item">
 						<div class="item-header">150:</div>
-						<input id="value150" name="value150" type="text">
+						<input id="value-150" name="value150" type="text">
 					</div>
 					<div class="storage-item">
 						<div class="item-header">200:</div>
-						<input id="value200" name="value200" type="text">
+						<input id="value-200" name="value200" type="text">
 					</div>
 				</div>
 			</div>
