--- a/html/users/editUser.html
+++ b/html/users/editUser.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<div id="sidenav" class="w3-sidebar w3-bar-block w3-collapse w3-card w3-animate-left">
-		<img class="w3-bar-item" src="../../images/test_img.jpg" alt="Logo">
+		<img class="w3-bar-item" src="../../images/logo.jpg" alt="Logo">
 		<button id="close-button" type="button" class="w3-bar-item w3-button w3-large w3-hide-large" onclick="closeSidebar()">Close &times;</button>
 		<a class="w3-bar-item w3-button main-page" href="../../index.html"></a>
 		<a class="w3-bar-item w3-button users active" href="users.html"></a>
