--- a/html/orders/orders.html
+++ b/html/orders/orders.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 	<div id="sidenav" class="w3-sidebar w3-bar-block w3-collapse w3-card w3-animate-left">
-		<img class="w3-bar-item" src="../../images/test_img.jpg" alt="Logo">
+		<img class="w3-bar-item" src="../../images/logo.jpg" alt="Logo">
 		<button id="close-button" type="button" class="w3-bar-item w3-button w3-large w3-hide-large" onclick="closeSidebar()">Close &times;</button>
 		<a class="w3-bar-item w3-button main-page" href="../../index.html"></a>
 		<a class="w3-bar-item w3-button users" href="../users/users.html"></a>
@@ -62,17 +62,19 @@
 					<th> Status </th>
 					<th> Action </th>
 				</tr>
-				<tr>
-					<td>1</td>
-					<td> Furn Inc.</td>
-					<td> 5d 4h 62m</td>
-					<td> In progress </td>
-					<td> 
-						<button> <img src="../../images/svg/info-circle.svg" alt="Edit"></button>
-						<button> <img src="../../images/svg/pencil-fill.svg" alt="Edit"></button>
-						<button> <img src="../../images/svg/trash-fill.svg" alt="Delete"></button> 
-					</td>
-				</tr>
+				<tbody id="orders">
+					<tr>
+						<td>1</td>
+						<td> Furn Inc.</td>
+						<td> 5d 4h 62m</td>
+						<td> In progress </td>
+						<td> 
+							<button> <img src="../../images/svg/info-circle.svg" alt="Edit"></button>
+							<button> <img src="../../images/svg/pencil-fill.svg" alt="Edit"></button>
+							<button> <img src="../../images/svg/trash-fill.svg" alt="Delete"></button> 
+						</td>
+					</tr>
+				</tbody>
 			</table>
 
 		</section>
