--- a/html/storage/storage.html
+++ b/html/storage/storage.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 	<div id="sidenav" class="w3-sidebar w3-bar-block w3-collapse w3-card w3-animate-left">
-		<img class="w3-bar-item" src="../../images/test_img.jpg" alt="Logo">
+		<img class="w3-bar-item" src="../../images/logo.jpg" alt="Logo">
 		<button id="close-button" type="button" class="w3-bar-item w3-button w3-large w3-hide-large" onclick="closeSidebar()">Close &times;</button>
 		<a class="w3-bar-item w3-button main-page" href="../../index.html"></a>
 		<a class="w3-bar-item w3-button users" href="../users/users.html"></a>
@@ -29,72 +29,72 @@
 		<header> <h1>Storage</h1> </header>
 
 		<section>
-			<div class="collapsing-horizontal-flex spreaded"> 
+			<div class="collapsing-horizontal-flex"> 
 				<div class="item-column">
 					<div class="storage-item">
 						<div class="item-header">ORG:</div>
-						<div id="orgValue">150</div>
+						<div id="value-org">150</div>
 						<div>
-							<button onclick="increment_item('orgValue')" class="w3-button w3-green w3-hover-green action-button">+</button>
-							<button  onclick="decrement_item('orgValue')" class="w3-button w3-amber w3-hover-amber action-button">-</button>
+							<button onclick="increment_item('value-org')" class="w3-button w3-green w3-hover-green action-button">+</button>
+							<button  onclick="decrement_item('value-org')" class="w3-button w3-amber w3-hover-amber action-button">-</button>
 						</div>
 					</div>
 					<div class="storage-item">
 						<div class="item-header">REG:</div>
-						<div id="regValue">200</div>
+						<div id="value-reg">200</div>
 						<div>
-							<button onclick="increment_item('regValue')" class="w3-button w3-green w3-hover-green action-button">+</button>
-							<button onclick="decrement_item('regValue')" class="w3-button w3-amber w3-hover-amber action-button">-</button>
+							<button onclick="increment_item('value-reg')" class="w3-button w3-green w3-hover-green action-button">+</button>
+							<button onclick="decrement_item('value-reg')" class="w3-button w3-amber w3-hover-amber action-button">-</button>
 						</div>
 					</div>
 					<div class="storage-item">
 						<div class="item-header">TP:</div>
-						<div id="tpValue">200</div>
+						<div id="value-tp">200</div>
 						<div>
-							<button onclick="increment_item('tpValue')" class="w3-button w3-green w3-hover-green action-button">+</button>
-							<button onclick="decrement_item('tpValue')" class="w3-button w3-amber w3-hover-amber action-button">-</button>
+							<button onclick="increment_item('value-tp')" class="w3-button w3-green w3-hover-green action-button">+</button>
+							<button onclick="decrement_item('value-tp')" class="w3-button w3-amber w3-hover-amber action-button">-</button>
 						</div>
 					</div>
 					<div class="storage-item">
 						<div class="item-header">MIX:</div>
-						<div id="mixValue">200</div>
+						<div id="value-mix">200</div>
 						<div>
-							<button onclick="increment_item('mixValue')" class="w3-button w3-green w3-hover-green action-button">+</button>
-							<button onclick="decrement_item('mixValue')" class="w3-button w3-amber w3-hover-amber action-button">-</button>
+							<button onclick="increment_item('value-mix')" class="w3-button w3-green w3-hover-green action-button">+</button>
+							<button onclick="decrement_item('value-mix')" class="w3-button w3-amber w3-hover-amber action-button">-</button>
 						</div>
 					</div>
 				</div>
 				<div class="item-column">
 					<div class="storage-item">
 						<div class="item-header">80:</div>
-						<div id="value80">300</div>
+						<div id="value-80">300</div>
 						<div>
-							<button onclick="increment_item('value80')" class="w3-button w3-green w3-hover-green action-button">+</button>
-							<button onclick="decrement_item('value80')" class="w3-button w3-amber w3-hover-amber action-button">-</button>
+							<button onclick="increment_item('value-80')" class="w3-button w3-green w3-hover-green action-button">+</button>
+							<button onclick="decrement_item('value-80')" class="w3-button w3-amber w3-hover-amber action-button">-</button>
 						</div>
 					</div>
 					<div class="storage-item">
 						<div class="item-header">100:</div>
-						<div id="value100" >300</div>
+						<div id="value-100" >300</div>
 						<div>
-							<button onclick="increment_item('value100')" class="w3-button w3-green w3-hover-green action-button">+</button>
-							<button onclick="decrement_item('value100')" class="w3-button w3-amber w3-hover-amber action-button">-</button>
+							<button onclick="increment_item('value-100')" class="w3-button w3-green w3-hover-green action-button">+</button>
+							<button onclick="decrement_item('value-100')" class="w3-button w3-amber w3-hover-amber action-button">-</button>
 						</div>
 					</div>
 					<div class="storage-item">
 						<div class="item-header">150:</div>
-						<div id="value150">300</div>
+						<div id="value-150">300</div>
 						<div>
-							<button onclick="increment_item('value150')" class="w3-button w3-green w3-hover-green action-button">+</button>
-							<button onclick="decrement_item('value150')" class="w3-button w3-amber w3-hover-amber action-button">-</button>
+							<button onclick="increment_item('value-150')" class="w3-button w3-green w3-hover-green action-button">+</button>
+							<button onclick="decrement_item('value-150')" class="w3-button w3-amber w3-hover-amber action-button">-</button>
 						</div>
 					</div>
 					<div class="storage-item">
 						<div class="item-header">200:</div>
-						<div id="value200">300</div>
+						<div id="value-200">300</div>
 						<div>
-							<button onclick="increment_item('value200')" class="w3-button w3-green w3-hover-green action-button">+</button>
-							<button onclick="decrement_item('value200')" class="w3-button w3-amber w3-hover-amber action-button">-</button>
+							<button onclick="increment_item('value-200')" class="w3-button w3-green w3-hover-green action-button">+</button>
+							<button onclick="decrement_item('value-200')" class="w3-button w3-amber w3-hover-amber action-button">-</button>
 						</div>
 					</div>
 				</div> 
