--- a/html/users/createUser.html
+++ b/html/users/createUser.html
@@ -6,11 +6,13 @@
 	<title>Create User</title>
 	<link rel="stylesheet" type="text/css" href="../../css/main_content.css">
 	<script type="text/javascript" src="../../js/show-hide-menu.js"></script>
+	<script type="text/javascript" src="../../js/user_control.js"></script>
+
 
 </head>
 <body>
 	<div id="sidenav" class="w3-sidebar w3-bar-block w3-collapse w3-card w3-animate-left">
-		<img class="w3-bar-item" src="../../images/test_img.jpg" alt="Logo">
+		<img class="w3-bar-item" src="../../images/logo.jpg" alt="Logo">
 		<button id="close-button" type="button" class="w3-bar-item w3-button w3-large w3-hide-large" onclick="closeSidebar()">Close &times;</button>
 		<a class="w3-bar-item w3-button main-page" href="../../index.html"></a>
 		<a class="w3-bar-item w3-button users active" href="users.html"></a>
@@ -27,28 +29,44 @@
 		<header><h1>Create New User</h1></header>
 
 		<section class="vertical-flex" style="align-items: center;">
-			<div class="vertical-flex" style="width: 70%;">
+			<form class="vertical-flex" style="width: 70%;" action="javascript:void(0);" method="POST" onsubmit="add_user()">
 				<p>Login</p>
-				<input type="text">
+				<input type="text" id="login" placeholder="Enter user login...">
 				<p>Email</p>
-				<input type="text">
+				<input type="email" id="email" placeholder="Enter user email...">
 
-				<div class="collapsing-horizontal-flex" style="margin: 3% 0; align-self: center;">
+				<div class="horizontal-flex" 
+				style="margin: 3% 0; width: 70%; justify-content: space-between; align-self: center;"
+				>
 					<div>
-						<input type="checkbox" id="isAdmin">
+						<input type="checkbox" id="is-admin" name="is-admin">
 						<label for="isAdmin">Admin</label>
 					</div>
 					<div>
-						<input type="checkbox" id="mobileUser">
+						<input type="checkbox" id="mobile-user" name="mobile-user">
 						<label for="mobileUser">Mobile</label>
 					</div>
 					<div>
-						<input type="checkbox" id="webUser">
+						<input type="checkbox" id="web-user" name="web-user">
 						<label for="webUser">Web</label>
 					</div>
 				</div>
-				<button class="w3-button action-button w3-light-green w3-hover-green">Create User</button>
-			</div>
+				<input type="submit" class="w3-button action-button w3-light-green w3-hover-green" value="CreateUser">
+			</form>
+		</section>
+		<section>
+			<table>
+				<tr>
+					<th> Login </th>
+					<th> Email </th>
+					<th> Mob </th>
+					<th> Web </th>
+					<th> Action </th>
+				</tr>
+				<tbody id = "users">
+					
+				</tbody>
+			</table>
 		</section>
 	</main>
 
