Implemented work with orders: searching and sorting, also added counter of orders in progress in the main orders page. Added backend connection. Specified project properties, added `.gitignore` file

--- a/html/orders/orders.html
+++ b/html/orders/orders.html
@@ -41,10 +41,10 @@
 
 				<div class="horizontal-flex">
 					<label style="align-self: center;" for="sort">Sort by:</label>
-					<select class="w3-button" style="border: 1px solid black;" id="sort" onchange="sort_table()">
+					<select class="w3-button" style="border: 1px solid #000000;" id="sort">
 						<option value="id">Order number</option>
 						<option value="customer">Customer</option>
-						<option value="realization_date">Realization time</option>
+						<option value="date_to">Realization time</option>
 						<option value="is_completed">Status</option>
 					</select>
 				</div>
@@ -72,8 +72,8 @@
 
 	</main>
 
-	<script type="text/javascript" src="../../js/show-hide-menu.js"></script>
-	<script type="text/javascript" src="../../js/orders_control.js"></script>
+	<script type="text/javascript" src="../../js/show-hide_menu.js"></script>
+	<script type="module" src="../../js/orders_control.js"></script>
 
 </body>
 </html>           
