--- a/html/orders/editOrder.html
+++ b/html/orders/editOrder.html
@@ -5,9 +5,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Orders</title>
 	<link rel="stylesheet" type="text/css" href="../../css/main_content.css">
-	<script type="text/javascript" src="../../js/show-hide-menu.js"></script>
-	<noscript>Your browser does not support JavaScript!</noscript>
-
 </head>
 <body>
 	<div id="sidenav" class="w3-sidebar w3-bar-block w3-collapse w3-card w3-animate-left">
@@ -28,4 +25,7 @@
 
 		<header> <h1>Orders</h1> </header>	
 	</main>
+
+	<script type="text/javascript" src="../../js/show-hide_menu.js"></script>
+
 </body>	           
