--- a/html/users/createUser.html
+++ b/html/users/createUser.html
@@ -5,10 +5,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Create User</title>
 	<link rel="stylesheet" type="text/css" href="../../css/main_content.css">
-	<script type="text/javascript" src="../../js/show-hide-menu.js"></script>
-	<script type="text/javascript" src="../../js/user_control.js"></script>
-
-
 </head>
 <body>
 	<div id="sidenav" class="w3-sidebar w3-bar-block w3-collapse w3-card w3-animate-left">
@@ -54,20 +50,8 @@
 				<input type="submit" class="w3-button action-button w3-light-green w3-hover-green" value="CreateUser">
 			</form>
 		</section>
-		<section>
-			<table>
-				<tr>
-					<th> Login </th>
-					<th> Email </th>
-					<th> Mob </th>
-					<th> Web </th>
-					<th> Action </th>
-				</tr>
-				<tbody id = "users">
-					
-				</tbody>
-			</table>
-		</section>
 	</main>
+
+	<script type="text/javascript" src="../../js/show-hide_menu.js"></script>
 
 </body>
