--- a/html/users/editUser.html
+++ b/html/users/editUser.html
@@ -5,8 +5,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Edit User</title>
 	<link rel="stylesheet" type="text/css" href="../../css/main_content.css">
-	<script type="text/javascript" src="../../js/show-hide-menu.js"></script>
-
 </head>
 <body>
 	<div id="sidenav" class="w3-sidebar w3-bar-block w3-collapse w3-card w3-animate-left">
@@ -28,5 +26,7 @@
 
 		<section></section>
 	</main>
+
+	<script type="text/javascript" src="../../js/show-hide_menu.js"></script>
 
 </body>
