--- a/html/reports/createReport.html
+++ b/html/reports/createReport.html
@@ -5,8 +5,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Reports</title>
 	<link rel="stylesheet" type="text/css" href="../../css/main_content.css">
-	<script type="text/javascript" src="../../js/show-hide-menu.js"></script>
-
 </head>
 <body>
 	<div id="sidenav" class="w3-sidebar w3-bar-block w3-collapse w3-card w3-animate-left">
@@ -23,7 +21,6 @@
 	<main class="w3-main">		
 		<div class="w3-container w3-blue topbar">
 			<button id="open-button" type="button" class="w3-button w3-blue w3-xlarge w3-hide-large" onclick='openSidebar()' > &#9776; </button>			
-			<h3> Welcome, User Name </h3>
 		</div>
 
 		<header> <h1>Generate Report</h1> </header>
@@ -61,5 +58,8 @@
 		</section>
 
 	</main>
+
+	<script type="text/javascript" src="../../js/show-hide_menu.js"></script>
+	
 </body>
 </html>           
