--- a/html/storage/storage.html
+++ b/html/storage/storage.html
@@ -5,9 +5,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Storage</title>
 	<link rel="stylesheet" type="text/css" href="../../css/main_content.css">
-	<script type="text/javascript" src="../../js/show-hide-menu.js"></script>
-	<script type="text/javascript" src="../../js/storage-control.js"></script>
-
 </head>
 <body>
 	<div id="sidenav" class="w3-sidebar w3-bar-block w3-collapse w3-card w3-animate-left">
@@ -102,5 +99,9 @@
 		</section>
 
 	</main>
+
+	<script type="text/javascript" src="../../js/show-hide_menu.js"></script>
+	<script type="text/javascript" src="../../js/storage_control.js"></script>
+
 </body>
 </html>           
